# ignis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dev/: Makefile
dev/app/: Dockerfile  partition_job.py  shuffle_job.py  skew_job.py  spill_job.py
dev/k8s/: configmap.yaml  namespace.yaml  partition-configmap.yaml  partition-job.yaml  shuffle-configmap.yaml  shuffle-job.yaml  spark-job.yaml  spill-configmap.yaml  spill-job.yaml
docs/: TODO.md  rules.md
examples/airflow/: README.md  spark_with_ignis.py  spark_with_ignis_test.py
examples/aws-lambda/: README.md  handler.py  requirements.txt
ignis/: __init__.py  cli.py
ignis/notify/: email.py  slack.py
ignis/parser/: event_log.py  models.py
ignis/reporter/: json_reporter.py  terminal.py
ignis/rules/: base.py  failed_tasks.py  gc_pressure.py  partition.py  shuffle.py  skew.py  spill.py
memory/: project_ignis.md
tests/: test_duration_null.py  test_output_json.py  test_partition.py  test_s3.py  test_shuffle.py  test_skew.py  test_spark4_compat.py  test_spill.py
tests/cloud/: helpers.py  test_azure.py  test_gcs.py  test_s3.py
tests/fixtures/: duration_null.ndjson  failed_tasks_example.ndjson  gc_pressure_example.ndjson  partition_example.ndjson  shuffle_example.ndjson  skew_example.ndjson  spark35_compat.ndjson  spark4_skew_example.ndjson  spill_example.ndjson
tests/integration/: conftest.py  test_cloud.py  test_spark_versions.py
tests/unit/: test_compressed.py  test_duration_null.py  test_failed_tasks.py  test_gc_pressure.py  test_notify_email.py  test_notify_slack.py  test_output_json.py  test_partition.py  test_shuffle.py  test_skew.py  test_spark35_compat.py  test_spark4_compat.py  test_spill.py  test_stage_dag.py  test_thresholds.py
