[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spark-ignis"
dynamic = ["version"]
description = "ESLint for Apache Spark jobs — analyze event logs, diagnose performance issues"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "fsspec>=2024.1",
]

[project.scripts]
ignis = "ignis.cli:main"

[project.optional-dependencies]
s3 = [
    "s3fs>=2024.1",
]
gcs = [
    "gcsfs>=2024.1",
]
azure = [
    "adlfs>=2024.1",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
integration = [
    "testcontainers[minio]>=4.0",
    "s3fs>=2024.1",
    "gcsfs>=2024.1",
    "adlfs>=2024.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["ignis"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-cloud tests, skipped unless env vars are set",
]
